add sdk feature

--- a/ARApplication/app/src/main/res/layout/activity_main.xml
+++ b/ARApplication/app/src/main/res/layout/activity_main.xml
@@ -6,48 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:id="@+id/arlist"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="parent">
-
-        <ImageView
-            android:id="@+id/img1"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="10dp"
-            android:src="@color/design_default_color_primary"
-            android:layout_marginStart="10dp" />
-
-        <ImageView
-            android:id="@+id/img2"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="10dp"
-            android:src="@color/teal_200"
-            android:layout_marginStart="10dp" />
-
-        <ImageView
-            android:id="@+id/img3"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="10dp"
-            android:src="@color/material_dynamic_neutral0"
-            android:layout_marginStart="10dp" />
-
-
-    </LinearLayout>
-
-    <fragment
-        android:id="@+id/arFragment"
-        android:name="com.chia.cheng.arapplication.FilterFragment"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/arlist" />
+   <Button
+       android:id="@+id/launcbtn"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintBottom_toBottomOf="parent"
+       android:text="launch"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
